--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-cooldown",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,9 +16,5 @@
   "devDependencies": {
     "typescript": "^5.1.6"
   },
-  "files": ["index.js", "index.d.ts"],
-  "repository": {
-    "url": "https://github.com/vyduck/better-cooldown"
-  },
-  "homepage": "https://github.com/vyduck/better-cooldown"
+  "files": ["index.js", "index.d.ts"]
 }
